Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -205,7 +205,7 @@
     "cant-load-controller": "No se puede cargar el controlador '%controllerName%'.",
     "cant-modify-reference": "Imposible modificar la referencia.",
     "cant-remove-accounting-entry": "No se puede eliminar el asiento",
-    "cant-remove-invoice-refund": "Fakturu nelze odstranit, pokud již má vrácenku",
+    "cant-remove-invoice-refund": "Fakturu nelze odstranit, pokud má vrácenou platbu",
     "cant-remove-receipt": "No se puede eliminar el recibo",
     "cant-update-audit-log": "No se puede modificar un registro de auditoria",
     "card": "Tarjeta",
@@ -750,7 +750,7 @@
     "import-accounting-plan": "Importar plan contable",
     "import-accounting-plan-p": "Deje este campo en blanco para usar el plan contable predeterminado. O bien seleccione un archivo con su plan contable personalizado.",
     "import-file": "Importní soubor",
-    "in-progress": "V procesu",
+    "in-progress": "V průběhu",
     "in-stock": "En stock",
     "inactive": "Inactivo",
     "income-and-expenses": "Ingresos y Gastos",
@@ -1528,7 +1528,7 @@
     "time": "Hora",
     "timezone": "Zona horaria",
     "title": "Título",
-    "title-font-size": "Velikost písma nadpisu",
+    "title-font-size": "Velikost písma titulu",
     "title-url": "Título (URL)",
     "to": "Para",
     "to-refund": "A devolver",
