--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1016,7 +1016,7 @@
     "no-data-received-form": "Ningún dato recibido por formulario",
     "no-extra-lines": "no-extra-lines",
     "no-gaps-found": "Ningún hueco encontrado",
-    "no-invoice": "no-invoice",
+    "no-invoice": "keine Rechnung",
     "no-outstanding-amount": "Kein ausstehender Betrag",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
     "no-reference": "Keine Referenz",
@@ -1321,7 +1321,7 @@
     "saturday": "Samstag",
     "save": "speichern",
     "save-data": "Daten speichern",
-    "save-filter": "save-filter",
+    "save-filter": "Filter speichern",
     "sdk": "sdk",
     "search": "Suche",
     "search-document": "Escribe el número de %doctype% para buscar.",
@@ -1335,7 +1335,7 @@
     "select-plugin-zip-file": "Wählen Sie die Plugin-Zip-Datei:",
     "select-user": "Select User",
     "selected-quantity": "approve-quantity",
-    "selector-number": "S",
+    "selector-number": "Wähler",
     "send": "Senden",
     "send-anonymous-data": "Enviar datos anónimos",
     "send-audios": "A",
@@ -1441,7 +1441,7 @@
     "subaccount-not-found": "Unterkonto 0 wurde nicht gefunden.",
     "subaccount-purchases": "Account for purchases",
     "subaccount-pyg-not-found": "Teil-Konto für Gewinn- und Verlustrechnung nicht gefunden",
-    "subaccount-sales": "Cuenta de ventas",
+    "subaccount-sales": "Verkaufskonto",
     "subaccounts": "Unterkonten",
     "subfamilies": "Subfamilien",
     "subject": "Betreff",
@@ -1504,7 +1504,7 @@
     "telemetry-data-to-send": "telemetry-data-to-send",
     "telephone-prefix": "Telefonvorwahl",
     "template": "Vorlage",
-    "template-error": "template-error",
+    "template-error": "Vorlagenfehler",
     "template-not-found": "Vorlage nicht gefunden",
     "templates": "Vorlagen",
     "test": "Test",
@@ -1580,7 +1580,7 @@
     "unlock-entry": "Eintrag entsperren",
     "unpaid": "Unbezahlt",
     "until-accounting-entry": "until-accounting-entry",
-    "until-date": "until-date",
+    "until-date": "bis-Datum",
     "until-subaccount": "Bis Unterkonto",
     "update": "aktuallisieren",
     "update-stock": "Lagerbestand aktualisieren",
