--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -146,7 +146,7 @@
     "balance-amounts": "Trial Balance",
     "balance-sheet": "Bilancio",
     "balance-sheets": "Balance Sheets",
-    "balances": "Balances",
+    "balances": "Bilanci",
     "bank-account": "Conto bancario",
     "bank-accounts": "conto in banca",
     "bank-mandate": "mandato bancario",
@@ -199,7 +199,7 @@
     "cant-delete-default-payment-method": "non è possibile eliminare il metodo di pagamento predefinito",
     "cant-delete-default-serie": "cant-delete-default-serie",
     "cant-delete-default-tax": "Impossibile eliminare la tassa predefinita",
-    "cant-delete-default-warehouse": "cant-delete-default-warehouse",
+    "cant-delete-default-warehouse": "Non è possibile eliminare il magazzino predefinito",
     "cant-delete-last-user": "Impossibile eliminare l'ultimo utente",
     "cant-delete-variant-with-documents": "Impossibile eliminare il prodotto o variante %reference% perché è già stato acquistato o venduto. Puoi però bloccarlo se desideri.",
     "cant-load-controller": "Impossibile caricare il controller.",
@@ -396,7 +396,7 @@
     "db-type": "Tipo di SQL Server",
     "db-type-not-recognized": "Connessione di tipo di database non riconosciuta. Deve essere MySQL o PostgreSQL",
     "db-user": "Database utenti",
-    "debit": "Debit",
+    "debit": "Debito",
     "debug-mode": "Modalità debug",
     "december": "Dicembre",
     "decimal-separator": "Separatore decimale",
@@ -691,7 +691,7 @@
     "generated-supplier-estimations": "%quantity% stime dei fornitori generate.",
     "generated-supplier-orders": "0 ordini fornitore generati.",
     "global-dto": "Sconto complessivo",
-    "global-dto-2": "global-dto-2",
+    "global-dto-2": "DTO globale 2",
     "greater-than": "Più grande di",
     "grid-help": "grid-help",
     "group": "Gruppo",
@@ -762,7 +762,7 @@
     "initial-number": "numero iniziale",
     "insert-update": "Inserisci o aggiorna",
     "installed": "installed",
-    "installed-plugins": "installed-plugins",
+    "installed-plugins": "Plugin installati",
     "installer": "Programma di installazione FacturaScripts 2018 (Alpha)",
     "installer-p": "Benvenuti al programma di installazione FacturaScripts. Compilare i campi necessari per la connessione al database.",
     "installer-requirements": "Le seguenti estensioni e funzioni sono necessarie per FacturaScript:",
@@ -781,18 +781,18 @@
     "invalid-number": "invalid-number",
     "invalid-request": "Richiesta non valida",
     "invalid-user-can-permission": "Permesso non valido: %permission%. I permessi disponibili sono access, delete, export, import, update e only-owner-data.",
-    "invalid-web": "Dirección web no válida",
+    "invalid-web": "Indirizzo web non valido: %web%",
     "invoice": "fattura",
     "invoice-email-subject": "Oggetto email della fattura",
     "invoice-email-text": "testo e-mail fattura",
-    "invoice-has-no-receipts": "La factura no tiene recibos. Cree alguno desde la pestaña recibos.",
+    "invoice-has-no-receipts": "La fattura non ha ricevute. Crea una dalla scheda ricevute.",
     "invoice-have-rectifying-cant-delete": "La fattura ha già una rettifica. Non posso essere cancellato.",
     "invoice-new-assigned-date": "Ci sono invocie con data più grande (0). Nuova data assegnata: 1",
     "invoice-number": "Numero di fattura",
     "invoice-receipts-diff": "Hay una diferencia (%diff%) entre el importe de la factura y la suma de sus recibos.",
     "invoice-regularized-cant-change-date": "La fattura è all'interno di una regolarizzazione di 0. La data non può essere modificata.",
     "invoice-regularized-cant-delete": "La fattura è all'interno di una regolarizzazione di 0. Non può essere cancellata.",
-    "invoice-without-acc-entry": "invoice-without-acc-entry",
+    "invoice-without-acc-entry": "Fattura senza movimento contabile",
     "invoiced": "fatturato",
     "invoices": "banconote",
     "invoices-cant-generate-new-docs": "Las facturas no pueden generar nuevos documentos",
@@ -982,7 +982,7 @@
     "month-wildcard-info": "Mese corrente (della data corrente)",
     "monthly": "Monthly",
     "monthly-payment": "Pago mensual",
-    "months": "months",
+    "months": "Mesi",
     "more": "more",
     "more-fields": "Altro campi",
     "more-plugins": "più plugin...",
@@ -1056,7 +1056,7 @@
     "offsetting-account": "Offsetting account",
     "only-active": "only-active",
     "only-charged": "only-charged",
-    "only-closed": "only-closed",
+    "only-closed": "Solo chiusi",
     "only-insert": "solo inserire",
     "only-owner-data": "only-owner-data",
     "only-pending": "only-pending",
@@ -1154,7 +1154,7 @@
     "plugin-need-update": "Il plugin %plugin% richiederà un aggiornamento per funzionare con la nuova versione di FacturaScripts.",
     "plugin-need-update-but": "El plugin %plugin% todavía no tiene actualización compatible.",
     "plugin-needed": "Plugin %pluginName% needed.",
-    "plugin-needs-fs-version": "plugin-needs-fs-version",
+    "plugin-needs-fs-version": "Il plugin %pluginName% richiede FacturaScripts %minVersion% ma è installata la versione %version% di FacturaScripts",
     "plugin-not-compatible": "Il Plugin %pluginName% non è compatibile con FacturaScripts %versione%",
     "plugin-order": "Ordine: %num%",
     "plugin-phpversion-error": "Il plugin %pluginName% richiede PHP %php% o superiore",
@@ -1213,7 +1213,7 @@
     "public": "Pubblico",
     "public-key": "Chiave pubblica",
     "purchase-rate": "Tasso di acquisto",
-    "purchased-quantity": "purchased-quantity",
+    "purchased-quantity": "Quantità acquistata",
     "purchases": "acquisti",
     "purchases-subaccount-not-found": "Conto acquisti non trovato",
     "pvp": "Prezzo al dettaglio",
@@ -1244,7 +1244,7 @@
     "record-deleted-correctly": "Record cancellato correttamente!",
     "record-deleted-error": "Errore nell'eliminare il record",
     "record-not-found": "Record non trovato",
-    "record-save-error": "An error occurred while saving the record",
+    "record-save-error": "Si è verificato un errore durante il salvataggio del record",
     "record-updated-correctly": "Registro aggiornato correttamente!",
     "recreate-system-integrity": "Recreate system integrity",
     "rectified-invoice": "Fattura rettificativa",
@@ -1254,7 +1254,7 @@
     "rectifying-serie": "serie correttiva",
     "redirect": "Redirección",
     "reference": "Riferimento",
-    "reference+description": "Reference + Description",
+    "reference+description": "Riferimento + Descrizione",
     "refresh": "ricaricare",
     "refresh-page": "Aggiorna pagina",
     "refund-amount": "Importo rimborsato",
@@ -1297,7 +1297,7 @@
     "requires-core": "Richiede FacturaScripts %version%",
     "reserved": "Riservato",
     "reset": "Ripristina",
-    "resource": "Resource",
+    "resource": "Risorsa",
     "respond": "Rispondere",
     "restore": "ripristina",
     "restore-data": "Ripristinare i dati",
@@ -1411,7 +1411,7 @@
     "specials-actions": "Azioni speciali",
     "spreadsheet-xls": "File XLS",
     "standard": "standard",
-    "start": "Inicio",
+    "start": "Inizio",
     "start-date": "Data d'inizio",
     "start-hour": "Ora di inizio",
     "start-time": "inizio",
@@ -1451,7 +1451,7 @@
     "sum": "Suma",
     "sum-netos-line-tax-must-be": "La somma della rete delle linee IVA dovrebbe essere: 0",
     "sum-total-line-tax-must-be": "La somma dei totali IVA delle righe IVA dovrebbe essere: 0",
-    "summary": "Summary",
+    "summary": "Sommario",
     "sums-and-balances": "Sommare e bilanciare",
     "sunday": "sunday",
     "supplied": "fornito",
@@ -1575,7 +1575,7 @@
     "unit-sale-price": "prezzo di vendita unitario",
     "unlimited": "Illimitato",
     "unlink": "Disconnetti",
-    "unlink-file": "unlink-file",
+    "unlink-file": "Scollega file",
     "unlink-install-ok": "Disinstallazione cancellata dal registro correttamente.",
     "unlock-entry": "Desbloquear",
     "unpaid": "non pagato",
