--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -318,7 +318,7 @@
     "core-update": "core-update",
     "core-update-warning": "Avisos de atualização",
     "correct": "Correto",
-    "cost": "Coste",
+    "cost": "Custo",
     "cost-price": "Preço de custo",
     "cost-price-policy": "Política de preço de custo",
     "counterpart": "Contrapartida",
@@ -493,8 +493,8 @@
     "dto": "Disco.",
     "dto-2": "dto-2",
     "duplicate-record": "Registro duplicado",
-    "duplicated-reference": "Referencia '%reference%' duplicada",
-    "duplicated-request": "duplicated-request",
+    "duplicated-reference": "Referência '%reference%' duplicada",
+    "duplicated-request": "Solicitação duplicada",
     "duration": "Duração",
     "edit": "Editar",
     "editable": "Editable",
@@ -667,7 +667,7 @@
     "generate-accounting-entry": "generate-accounting-entry",
     "generate-doc-type": "Gerar tipo de documento",
     "generate-invoice": "Gerar fatura",
-    "generate-receipts": "generate-receipts",
+    "generate-receipts": "Gerar recibos",
     "generate-settlements": "generate-settlements",
     "generate-test-data": "Gerar dados de teste",
     "generate-title": "Criar Relatório",
@@ -757,7 +757,7 @@
     "incompatible-document": "Documento incompatível: %code%. Para agrupar documentos, eles devem ter o mesmo cliente ou fornecedor, série, armazém, moeda e descontos globais.",
     "incompatible-with-facturascripts": "Não é compatível com FacturaScripts %version%",
     "incorrect-accounting-amount": "Incorrect accounting entry amount.",
-    "info": "Info",
+    "info": "Informação",
     "infostate-component-title": "Status Information",
     "initial-number": "initial-number",
     "insert-update": "Inserir ou atualizar",
@@ -847,7 +847,7 @@
     "languages-pl_PL": "Polonês",
     "languages-pt_BR": "Português (Brasil)",
     "languages-pt_PT": "Português (Portugal)",
-    "languages-va_ES": "languages-va_ES",
+    "languages-va_ES": "Valenciano",
     "last-activity": "Última atividade",
     "last-bimester": "O bimestre passado",
     "last-block": "Último bloco",
@@ -883,7 +883,7 @@
     "linux": "Linux",
     "list": "Lista",
     "load-def-acc-plan": "load-def-acc-plan",
-    "loading-controller": "Controlador de carga: '0'",
+    "loading-controller": "Carregando controlador: '%controllerName%'",
     "location": "Location",
     "lock-accounting": "lock-accounting",
     "lock-entry": "lock-entry",
@@ -894,7 +894,7 @@
     "log": "Log",
     "login": "Entrar",
     "login-cookie-fail": "O cookie da sessão falhou",
-    "login-image": "Imagen de login",
+    "login-image": "Imagem de login",
     "login-ok": "Login bem-sucedido (cookie). Usuário: '%nick%'",
     "login-password-fail": "Usuário ou senha incorretos",
     "login-text": "Entrar",
@@ -1018,7 +1018,7 @@
     "no-gaps-found": "N",
     "no-invoice": "sem fatura",
     "no-outstanding-amount": "no-outstanding-amount",
-    "no-print-permission": "No tiene permiso para imprimir o exportar",
+    "no-print-permission": "Sem permissão para imprimir ou exportar",
     "no-reference": "Sin referencia",
     "no-selected-item": "Nenhum item selecionado",
     "no-stock": "Sem estoque",
@@ -1067,7 +1067,7 @@
     "opened": "Aberto",
     "opening-acounting-completed": "opening-acounting-completed",
     "opening-operation": "Abertura",
-    "operation": "Operación",
+    "operation": "Operação",
     "operator": "Operador",
     "option": "Opção",
     "optional": "optional",
@@ -1173,7 +1173,7 @@
     "precio": "Preço",
     "predefined-concepts": "Predefined Concepts",
     "preferences": "Preferências",
-    "preview": "preview",
+    "preview": "Pré-visualização",
     "previous": "Anterior",
     "previous-balance": "Balanço anterior",
     "previous-documents": "Documentos anteriores",
@@ -1252,12 +1252,12 @@
     "rectified-invoices": "Facturas rectificativas",
     "rectifying": "Retificativa",
     "rectifying-serie": "Série retificativa",
-    "redirect": "Redirección",
+    "redirect": "Redirecionamento",
     "reference": "Referência",
     "reference+description": "Reference + Description",
     "refresh": "Atualizar",
     "refresh-page": "Atualizar página",
-    "refund-amount": "Cantidad devuelta",
+    "refund-amount": "Valor reembolsado",
     "refund-payment-concept": "Reembolso do documento %document%",
     "refunds": "Reembolsos",
     "register": "Registrar",
@@ -1302,7 +1302,7 @@
     "restore": "Restaurar",
     "restore-data": "Restaurar dados",
     "result": "Resultado",
-    "retention": "retention",
+    "retention": "retenção",
     "retentions": "Retentions",
     "review-date": "Data de revisão",
     "right": "Direita",
@@ -1310,7 +1310,7 @@
     "rol": "Rol",
     "role": "Função",
     "roles": "Funções",
-    "rules": "Rules",
+    "rules": "Regras",
     "run": "executar",
     "running-plugin-cron": "Running FacturaScripts cron for plugin %pluginName%",
     "sales": "Vendas",
@@ -1580,7 +1580,7 @@
     "unlock-entry": "Desbloquear",
     "unpaid": "unpaid",
     "until-accounting-entry": "Até entrada contábil",
-    "until-date": "until-date",
+    "until-date": "Até a data",
     "until-subaccount": "até a subconta",
     "update": "update",
     "update-stock": "Atualizar estoque",
@@ -1605,7 +1605,7 @@
     "validate-iban": "Validar IBAN",
     "valuation-type": "Tipo de avaliação",
     "value": "Valor",
-    "value-x": "value-x",
+    "value-x": "Valor X",
     "value-y": "value-y",
     "values": "Valores",
     "variables": "Variáveis",
@@ -1671,7 +1671,7 @@
     "you-sent-a-document": "Enviaste un documento",
     "you-sent-a-location": "Você enviou uma localização",
     "you-sent-a-picture": "Você enviou uma imagem",
-    "you-sent-a-video": "Enviaste un video",
+    "you-sent-a-video": "Você enviou um vídeo",
     "you-should-change-passwd": "deveria-mudar-senha",
     "your": "your",
     "zip-code": "Código postal",
