--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -201,7 +201,7 @@
     "cant-delete-default-tax": "cant-delete-default-tax",
     "cant-delete-default-warehouse": "cant-delete-default-warehouse",
     "cant-delete-last-user": "No se puede eliminar el último usuario",
-    "cant-delete-variant-with-documents": "Não é possível eliminar o produto ou variante %reference% pois já foi comprada ou vendida. No entanto, pode bloqueá-la se desejar.",
+    "cant-delete-variant-with-documents": "Não é possível excluir o produto ou variante %reference% porque já foi comprado ou vendido. No entanto, você pode bloqueá-lo se desejar.",
     "cant-load-controller": "Não é possível carregar o controlador.",
     "cant-modify-reference": "Não pode editar a referência.",
     "cant-remove-accounting-entry": "No se puede eliminar la entrada contable",
@@ -318,7 +318,7 @@
     "core-update": "core-update",
     "core-update-warning": "Advertencias de actualización",
     "correct": "Correcto",
-    "cost": "Coste",
+    "cost": "Custo",
     "cost-price": "Preço de custo",
     "cost-price-policy": "cost-price-policy",
     "counterpart": "Offsetting",
@@ -396,7 +396,7 @@
     "db-type": "Tipo de servidor SQL",
     "db-type-not-recognized": "Conexão de tipo de banco de dados não reconhecida. Deve ser MySQL ou PostgreSQL",
     "db-user": "Usuário de banco de dados",
-    "debit": "Debit",
+    "debit": "Débito",
     "debug-mode": "Debug mode",
     "december": "Dezembro",
     "decimal-separator": "Decimal",
@@ -493,7 +493,7 @@
     "dto": "Disco.",
     "dto-2": "dto-2",
     "duplicate-record": "duplicate-record",
-    "duplicated-reference": "Referencia '%reference%' duplicada",
+    "duplicated-reference": "Referência '%reference%' duplicada",
     "duplicated-request": "duplicated-request",
     "duration": "Duração",
     "edit": "Editar",
@@ -805,7 +805,7 @@
     "is-creditor": "É credor",
     "is-person": "É um indivíduo (não uma empresa)",
     "iso": "ISO",
-    "issued": "Issued",
+    "issued": "Emitido",
     "item-limit": "Itens por página",
     "items-added-correctly": "items-added-correctly",
     "items-removed-correctly": "%num% elementos removidos corretamente",
@@ -847,7 +847,7 @@
     "languages-pl_PL": "Polaco",
     "languages-pt_BR": "Português (Brasil)",
     "languages-pt_PT": "Português (Portugal)",
-    "languages-va_ES": "languages-va_ES",
+    "languages-va_ES": "Valenciano",
     "last-activity": "Ultima atividade",
     "last-bimester": "last-bimester",
     "last-block": "Último bloco",
@@ -869,7 +869,7 @@
     "left": "Left",
     "level": "Level",
     "level-benefit-sales": "Nível para ver benefícios",
-    "level-cost-sales": "Nivel para ver costes",
+    "level-cost-sales": "Nível para ver custos",
     "level1": "Level 1",
     "level2": "Level 2",
     "level3": "Nível 3",
@@ -915,7 +915,7 @@
     "machines": "máquinas",
     "macro-account-note-info": "Keys for values replacement macro",
     "mail-server-error": "Error al conectar al servidor de correio",
-    "mail-test-error": "mail-test-error",
+    "mail-test-error": "Erro no teste de email",
     "mail-test-ok": "Prova de email satisfatória",
     "mailer": "Controlador de email",
     "main-address": "Endereço principal",
@@ -993,7 +993,7 @@
     "mysql-socket": "Socket MySQL",
     "mysql-socket-p": "Este campo só é necessário em algumas hospedagens MySQL.",
     "name": "Nome",
-    "name-or-business-name": "Name or Bussine name",
+    "name-or-business-name": "Nome ou razão social",
     "nature": "Natureza",
     "need-help-password": "Você precisa ajuda com a sua senha?",
     "negative-balance": "Saldo Negativo",
@@ -1252,7 +1252,7 @@
     "rectified-invoices": "Facturas rectificativas",
     "rectifying": "Retificativa",
     "rectifying-serie": "Série retificativa",
-    "redirect": "Redirección",
+    "redirect": "Redirecionamento",
     "reference": "Referência",
     "reference+description": "Reference + Description",
     "refresh": "Atualizar",
@@ -1280,7 +1280,7 @@
     "renumber": "Renumerar",
     "renumber-accounting": "Renumber Accounting",
     "renumber-accounting-error": "An error occurred while renumber accounting entries in financial year %exerciseCode%",
-    "renumber-accounting-ok": "Renumbering of accounting entries completed",
+    "renumber-accounting-ok": "Renumeración de lançamentos contabilísticos concluída",
     "renumber-accounting-p": "Renumerar lançamentos por data, de menor a maior",
     "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
     "renumber-invoices-success": "As faturas do exercício '%exercise%' foram renumeradas com sucesso",
@@ -1302,7 +1302,7 @@
     "restore": "Restaurar",
     "restore-data": "Restaurar dados",
     "result": "Result",
-    "retention": "retention",
+    "retention": "retenção",
     "retentions": "Retentions",
     "review-date": "Data de revisão",
     "right": "Direita",
@@ -1367,7 +1367,7 @@
     "services": "Serviços",
     "settings": "Ajustes",
     "settlement": "settlement",
-    "settlement-product": "settlement-product",
+    "settlement-product": "Produto de liquidação",
     "settlements": "settlements",
     "setup-options": "Opções de configuração",
     "shipping": "Shipping",
@@ -1448,7 +1448,7 @@
     "subtotal": "Subtotal",
     "subtract": "Tirar do estoque",
     "success": "success",
-    "sum": "Suma",
+    "sum": "Soma",
     "sum-netos-line-tax-must-be": "A soma da rede das linhas do IVA deve ser: 0",
     "sum-total-line-tax-must-be": "A soma dos totais IVA das linhas IVA deve ser: 0",
     "summary": "Resumo",
@@ -1592,7 +1592,7 @@
     "upload-file": "E",
     "uploaded-at": "Uploaded at",
     "url": "Local na rede Internet",
-    "use-gaps": "use-gaps",
+    "use-gaps": "Usar intervalos",
     "use-holes-invoices-esp": "Si desmarcas el uso de huecos en facturas y eliminas alguna se quedará el hueco en la facturación y tendrás problemas con hacienda",
     "user": "Do utilizador",
     "user-and-config": "Usuario y configuración",
