--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -925,7 +925,7 @@
     "manufacturer": "Fabricant",
     "manufacturer-code": "Codi del fabricant",
     "manufacturers": "Fabricants",
-    "march": "Marzo",
+    "march": "Març",
     "margin": "Marge",
     "margin-top": "Marge superior",
     "mark-as-homepage": "Marcar com a pàgina d'inici",
