Actualizadas las traducciones.

--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -351,7 +351,7 @@
     "customer-delivery-note": "Customer delivery note",
     "customer-delivery-notes": "Customer delivery notes",
     "customer-estimation": "Customer estimation",
-    "customer-estimations": "Customer estimations",
+    "customer-estimations": "Customer quotes",
     "customer-group": "Customer group",
     "customer-groups": "Customer groups",
     "customer-invoice": "Customer invoice",
@@ -566,10 +566,10 @@
     "es-tax-regime-telecom": "Special regimes applicable to telecommunications, radio broadcasting or television services and those provided electronically",
     "es-tax-regime-travel": "Special scheme for travel agents",
     "es-tax-regime-used-goods": "Special regime for used goods, art objects, antiques and collectibles",
-    "estimation": "Estimation",
+    "estimation": "Quotation",
     "estimation-email-subject": "Your estimation %code%",
     "estimation-email-text": "Hello, I am attaching your estimation %code%",
-    "estimations": "Estimations",
+    "estimations": "Quotations",
     "event": "Event",
     "events": "Events",
     "exceptions": "Exceptions",
