--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -610,7 +610,7 @@
     "file-not-found": "L'archiu %fileName% no s'ha trobat.",
     "file-not-supported": "Fitxer no soportat",
     "file-size-error": "Error en enviar el fitxer %fileName% perquè supera la mida màxima permesa de %maxSize% MB",
-    "file-type-error": "Error al enviar el archivo de tipo%typeFile%. Los tipos admitidos son: audio, document, image y video.",
+    "file-type-error": "Error al enviar l’arxiu del de tipus %typeFile%. Sols s’admeten: audio, document, image y video.",
     "file-yet-exists": "El fitxer %filePath% ja existeix",
     "filecache-clear": "Filecache netejada.",
     "filecache-delete-key-item": "L'element '%item%' s'ha borrat de Filecache.",
@@ -622,7 +622,7 @@
     "filters": "Filtres",
     "finalize": "Acabar",
     "find-problems": "Trobar problemes",
-    "finished": "Finalizado",
+    "finished": "Finalitzat",
     "finished-cron": "L'execució del cron FacturaScripts ja ha acabat. El temps necessari ha sigut de: %timeNeeded%",
     "first-quarter": "Primer trimestre",
     "first-steps": "Primers passos",
